--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,47 @@
 /**app.wxss**/
+page {
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'PingFang SC', 'Microsoft YaHei', sans-serif;
+  font-size: 28rpx;
+  color: #333;
+  background-color: #f6f6f6;
+}
+
 .container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
+  padding: 20rpx;
   box-sizing: border-box;
-} 
+}
+
+button {
+  background-color: #07C160;
+  color: #fff;
+  border-radius: 8rpx;
+}
+
+button::after {
+  border: none;
+}
+
+button[disabled] {
+  background-color: #ccc !important;
+  color: #fff !important;
+}
+
+.panel-title {
+  font-size: 30rpx;
+  font-weight: bold;
+  margin-bottom: 20rpx;
+  padding-bottom: 10rpx;
+  border-bottom: 1rpx solid #eee;
+}
+
+.loading {
+  text-align: center;
+  padding: 40rpx 0;
+  color: #999;
+}
+
+.empty-list {
+  text-align: center;
+  padding: 60rpx 0;
+  color: #999;
+}
