20250405 支持文章获取，美化显示，并可以支持复制文章链接

--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -8,7 +8,7 @@
       </view>
     </view>
     
-    <scroll-view scroll-y="true" class="news-content-container">
+    <scroll-view scroll-y="true" class="news-content-container" enhanced="true" show-scrollbar="false">
       <rich-text nodes="{{formattedContent}}" space="nbsp" class="news-content"></rich-text>
     </scroll-view>
     
